# modBuilder

./: .gitignore  mod_builder_conf.yaml  pyproject.toml  readme.md  requirements.txt
mod_builder/: app.py  builder.py  mod_builder_gui.py
tests/: builder_test.py
tests/fixtures/: mod_builder_conf.yaml
